tests/test_enum/bad/empty.catala_en
## Test

```catala
declaration enumeration Foo:

declaration scope Bar:
  internal foo content Foo
```

```catala-test {id="Typecheck"}
catala Typecheck 
```
